# olist-analytics-platform

./: .gitignore  .user.yml  README.md  inspect_db.py  main.py  profiles.yml  pyproject.toml
dashboard/: dashboard.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/: _marts_models.yml  dim_customers.sql  dim_products.sql  fct_order_items_detailed.sql  fct_orders.sql
dbt_project/models/staging/: _sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
scripts/: ingest_data.py
